# QNvFanControl

./: CMakeLists.txt  Main.cpp  Notify.cpp  Notify.hpp  Nvidia.cpp  Nvidia.hpp
